adding unit tests